# DashStreamlit

./: .replit  app.py  new_app.py  new_operational_dashboard.py  new_tactical_dashboard.py  operational_dashboard.py  pyproject.toml  requirement.txt  res.csv  styles.css  tactical_dashboard.py  test.py  utils.py
assets/: main.css
attached_assets/: Pasted-Dashboard-Op-rationnel-Niveau-Floorshop-cha-nes-de-production-Objectifs--1743074274399.txt  Pasted-Dashboard-Tactique-Niveau-chefs-services-Objectifs--1743071412394.txt  Pasted-File-C-Users-Haythem-Khalifa-Downloads-DataDashPro-1-DataDashPro-app-py-line-1301-in-module--1743242913291.txt  Pasted-N-Enr-IDReclamation-IDTypeReclamation-IDChaineMontage-IDEmploye-IDOperation-DATE-IDOFabrica-1743049055948.txt  analytics.py  analytics_callbacks.py  app.py  callbacks.py  charts.py  config.py  custom.css  data_filter.css  data_loader.py  data_processor.py  filters.py  form_generator.py  graph_options.py  header.py  login.py  metrics.py  reports.py  reports_callbacks.py  res.csv  sidebar.py
callbacks/: analytics_callbacks.py  chart_callbacks.py  filter_callbacks.py  login_callbacks.py  reports_callbacks.py
components/: analytics.py  charts.py  filters.py  header.py  login.py  metrics.py  reports.py  sidebar.py
utils/: data_loader.py  filter_utils.py  graph_options.py  pdf_generator.py
